tests/ui/traits/normalize/normalize-diverging-alias-in-struct.next.stderr
error[E0271]: type mismatch resolving `<u8 as Trait>::Diverges<u8> normalizes-to _`
  --> $DIR/normalize-diverging-alias-in-struct.rs:21:12
   |
LL |     field: Box<<u8 as Trait>::Diverges<u8>>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `<u8 as Trait>::Diverges<u8> normalizes-to _`
  --> $DIR/normalize-diverging-alias-in-struct.rs:21:12
   |
LL |     field: Box<<u8 as Trait>::Diverges<u8>>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ
   |
note: required by a bound in `Box`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
